# CContainer

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: build.yml
includes/: ccontainer.h  clist.h  cqueue.h  cstack.h
sources/: list.c  queue.c  stack.c
sources/stack/: stack.c
tests/: stack_test.c
